# GoRoutes_BackEnd

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
config/: router.py  settings.py  urls.py
core/authentication/: admin.py  authentication.py  managers.py  middleware.py  urls.py
core/authentication/migrations/: 0001_initial.py  0002_alter_user_data_of_birth.py  0002_remove_user_username.py  0003_driver.py  0004_passenger_responsible_studentdata.py  0005_alter_parent_children.py  0005_passenger_address.py  0006_address_is_main.py  0007_alter_parent_students.py  0007_remove_user_passage_id.py  0008_alter_responsible_kinship.py  0008_alter_user_managers.py  0009_remove_responsible_kinship_and_more.py  0010_alter_user_username.py
core/authentication/models/: __init__.py  address.py  driver.py  parents.py  passenger.py  responsible.py  student.py  user.py
core/authentication/serializers/: __init__.py  address.py  driver.py  parents.py  student.py  user.py
core/authentication/views/: __init__.py  driver.py  parents.py  student.py  user.py
core/goroutes/: admin.py  apps.py  urls.py
core/goroutes/migrations/: 0001_initial.py  0002_notify.py  0003_alter_notify_to_type.py  0004_alter_notify_to_type.py  0005_logentry.py
core/goroutes/models/: __init__.py  logentry.py  notify.py  vehicle.py
core/goroutes/serializers/: __init__.py  notify.py  vehicle.py
core/goroutes/signals/: vehicle.py
core/goroutes/views/: __init__.py  notify.py  vehicle.py
core/management/commands/: migrate_db.py  populate_all.py
tests/authentication/migrations/: 0001_initial.py  0003_parent.py  0004_alter_parent_children.py  0006_rename_children_parent_students.py
tests/authentication/models/: driver.py  parents.py
tests/jsons/: create.txt
(+27 files in other folders)
